--- a/palmview-lab.html
+++ b/palmview-lab.html
@@ -89,7 +89,7 @@
     .demo-placeholder { padding: 4rem 2rem; text-align: center; color: var(--color-text-secondary); }
     .demo-placeholder svg { margin-bottom: 1.5rem; opacity: 0.5; }
     .demo-placeholder h3 { font-family: var(--font-display); font-size: 1.5rem; color: var(--color-text); margin-bottom: 0.5rem; }
-    .cta-section { padding: 2rem 0; }
+    .cta-section { padding: 2rem 0; text-align: center; }
     .cta-card { background: linear-gradient(135deg, white 0%, white 50%, rgba(6, 182, 212, 0.12) 100%); border: 1px solid rgba(22, 78, 99, 0.1); border-radius: 16px; padding: 2rem; text-align: center; position: relative; overflow: hidden; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04); }
     .cta-card::before { content: ''; position: absolute; top: 0; left: 0; width: 4px; height: 100%; background: var(--project-gradient); }
     .btn-cta { display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem; background: var(--project-gradient); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 0.95rem; transition: all 0.2s ease; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
@@ -638,7 +638,7 @@
           </div>
         </div>
       </div>
- <div class="cta-section"><div class="cta-card"><a href="index.html#work" class="btn-cta"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>View More Case Studies</a></div></div>
+ <div class="cta-section"><a href="index.html#work" class="btn-cta"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>View More Case Studies</a></div>
     </div></section>
     <div class="demo-modal" id="demoModal" onclick="closeDemo(event)"><div class="demo-modal-content" onclick="event.stopPropagation()"><button class="demo-close" onclick="closeDemo()">&times;</button><div class="demo-placeholder"><svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"/><line x1="8" y1="21" x2="16" y2="21"/><line x1="12" y1="17" x2="12" y2="21"/></svg><h3>Demo Coming Soon</h3><p>The interactive demo for this project is currently being developed.</p></div></div></div>
     <footer class="footer"><div class="footer-content"><nav class="footer-nav"><a href="index.html#work">Work</a><a href="in-the-news.html">Press</a><a href="index.html#testimonials">Testimonials</a><a href="index.html#skills">Skills</a><a href="index.html#contact">Contact</a></nav><p class="footer-copyright">© 2025 Christie Stephenson Saavedra. All rights reserved.</p></div></footer>
