Updated Placeholder content

--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -37,7 +37,7 @@
     .hero-title { font-family: var(--font-display); font-size: clamp(2rem, 4.5vw, 3rem); font-weight: 400; line-height: 1.15; margin-bottom: 1.5rem; }
     .hero-summary { font-size: 1.15rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto 2rem; }
     .results-banner { display: flex; justify-content: center; gap: 1.5rem; flex-wrap: wrap; }
-    .result-card { background: var(--project-gradient); border-radius: 12px; padding: 1.25rem 1.5rem; text-align: center; min-width: 140px; color: white; }
+    .result-card { background: var(--project-gradient); border-radius: 12px; padding: 1rem 1.25rem; text-align: center; min-width: 120px; color: white; }
 .result-number { font-family: var(--font-display); font-size: 1.75rem; color: white; }
 .result-label { font-size: 0.75rem; color: rgba(255,255,255,0.9); text-transform: uppercase; letter-spacing: 0.05em; }
     .content-container { max-width: var(--max-width); margin: 0 auto; }
@@ -399,10 +399,10 @@
 .casestudy-box {
   margin-top: 2rem;
   margin-bottom: 0;
-  border: 2px dashed #f97316;
+  border: 2px dashed #7c3aed;
   border-radius: 10px;
   padding: 0.75rem 1.25rem;
-  background: rgba(249, 115, 22, 0.08);
+  background: rgba(124, 58, 237, 0.06);
   text-align: center;
   display: inline-flex;
   align-items: center;
@@ -415,9 +415,10 @@
   font-size: 0.65rem;
   font-weight: 700;
   letter-spacing: 0.05em;
-  color: #c2410c;
+  color: #7c3aed;
   margin-bottom: 0;
   display: block;
+}
 }.casestudy-dropdown {
   position: relative;
   display: inline-block;
@@ -630,13 +631,14 @@
           <span class="hero-role">Co-founder / Marketing</span>
           <span class="hero-org">Gardner Chiropractic</span>
         </div>
-        <h1 class="hero-title">Community Outreach & Marketing</h1>
-        <p class="hero-summary">Built community partnerships and secured business contracts through strategic outreach, event planning, and relationship building.</p>
-        <div class="results-banner">
-          <div class="result-card"><div class="result-number">1</div><div class="result-label">Trucking Contract</div></div>
-          <div class="result-card"><div class="result-number">Pro</div><div class="result-label">Athlete Event</div></div>
-          <div class="result-card"><div class="result-number">Sideline</div><div class="result-label">Partnership</div></div>
-       </div>
+        <h1 class="hero-title">Built to Last: 27 Years and Counting</h1>
+        <p class="hero-summary">Co-founded a chiropractic practice from scratch, negotiated its purchase, and built it to a full schedule in 18 months—still operating 27+ years later.</p>
+       <div class="results-banner">
+  <div class="result-card"><div class="result-number">27+</div><div class="result-label">Years Still Operating</div></div>
+  <div class="result-card"><div class="result-number">0 → Full</div><div class="result-label">In 18 Months</div></div>
+  <div class="result-card"><div class="result-number">$0</div><div class="result-label">Ad Spend</div></div>
+  <div class="result-card"><div class="result-number">3</div><div class="result-label">Revenue Streams</div></div>
+</div>
     </div>
     <div class="casestudy-box">
           <span class="casestudy-label">CASE STUDY</span>
@@ -664,42 +666,45 @@
     <section class="content">
       <div class="content-container">
 
-        <div class="content-section">
-          <h2 class="content-title">The Challenge</h2>
-          <div class="glass-card">
-            <p class="content-text">[PLACEHOLDER: Describe the challenge of establishing a new chiropractic practice and building community presence. What obstacles did you face? What was the competitive landscape like?]</p>
-            <p class="content-text">[PLACEHOLDER: Add details about the initial situation and goals for the practice.]</p>
-          </div>
-        </div>
+<div class="content-section">
+  <h2 class="content-title">The Challenge</h2>
+  <div class="glass-card">
+    <p class="content-text">New practice. No patients. No reputation. No referral network.</p>
+    <p class="content-text">We opened our doors in Phoenix where established chiropractors had decades of relationships locked down. The question wasn't just "how do we get patients?"—it was "how do we become the practice people think of first?"</p>
+    <p class="content-text">I knew we couldn't outspend the competition. We had to out-hustle and out-connect them.</p>
+  </div>
+</div>
 
-        <div class="content-section">
-          <h2 class="content-title">My Role</h2>
-          <div class="glass-card">
-            <p class="content-text">As Co-founder with responsibility for Marketing and Community Outreach, I was responsible for:</p>
-            <ul class="content-list">
-              <li>Developing and executing marketing strategies</li>
-              <li>Building relationships with local businesses and organizations</li>
-              <li>Planning and organizing community events</li>
-              <li>Securing business contracts and partnerships</li>
-              <li>Establishing the practice's presence in the local sports community</li>
-            </ul>
-          </div>
-        </div>
+  <div class="content-section">
+  <h2 class="content-title">What I Owned</h2>
+  <div class="glass-card">
+    <p class="content-text">As Co-founder, I wore every hat except the clinical one:</p>
+    <ul class="content-list">
+      <li><strong>Negotiated the practice purchase</strong>—handled the deal that made ownership possible</li>
+      <li><strong>Business development</strong>—cold calls, contracts, and partnerships from scratch</li>
+      <li><strong>Marketing strategy</strong>—zero ad budget meant creative grassroots outreach</li>
+      <li><strong>Community events</strong>—planned and executed events that drove word-of-mouth</li>
+      <li><strong>Sports partnerships</strong>—positioned us as the go-to for local athletes</li>
+    </ul>
+  </div>
+</div>
 
         <div class="content-section">
           <h2 class="content-title">Key Accomplishments</h2>
           
           <div class="glass-card" style="margin-bottom: 1.5rem;">
             <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Trucking Company Contract</h3>
-            <p class="content-text">[PLACEHOLDER: Describe how you identified the opportunity with the trucking company. What was your approach? How did you make the pitch? What were the terms of the contract?]</p>
-            <p class="content-text">[PLACEHOLDER: Add details about the impact of this contract on the practice.]</p>
+            <p class="content-text"><h3>Landing the Trucking Contract</h3>
+<p class="content-text">I cold-called a local trucking company and pitched something they'd never considered: on-site chiropractic care for their drivers.</p>
+<p class="content-text">Truckers sit for 10+ hours a day. Back problems aren't a "maybe"—they're a "when." I positioned us as preventive care that would reduce their workers' comp claims and keep drivers on the road.</p></p>
+            <p class="content-text">They said yes. We became their exclusive provider.</p>
           </div>
 
           <div class="glass-card" style="margin-bottom: 1.5rem;">
             <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Community Day Event</h3>
-            <p class="content-text">[PLACEHOLDER: Describe the Community Day event you organized. Include details about:</p>
+            <p class="content-text">One event. Months of word-of-mouth momentum.</p>
             <ul class="content-list">
-              <li>The professional baseball player who attended (what team? what was their connection to chiropractic care?)</li>
+              <li>A professional baseball player from the St. Louis Cardinals attended.</li>
               <li>Activities for kids and families</li>
               <li>How you promoted the event</li>
               <li>Attendance and community response</li>
@@ -709,12 +714,10 @@
 
           <div class="glass-card">
             <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Football Sideline Partnership</h3>
-            <p class="content-text">[PLACEHOLDER: Describe how you established the partnership for the chiropractor to serve as the town's football sideline chiropractor. Include:</p>
+            <p class="content-text">Becoming the Town's Team Doc</p>
             <ul class="content-list">
-              <li>How you approached the school/athletic department</li>
-              <li>What the arrangement involved</li>
-              <li>Benefits to the athletes and the practice</li>
-              <li>How this built credibility in the community</li>
+              <p class="content-text">Friday night football is religion in small towns. I approached the high school athletic director with an offer: free sideline chiropractic care for every home game.</p>
+<p class="content-text">No charge to the school. Just our name on the banner and our doc on the field.</p>
             </ul>
           </div>
         </div>
@@ -726,12 +729,12 @@
         <div class="content-section">
           <h2 class="content-title">Results & Impact</h2>
           <div class="glass-card">
-            <p class="content-text">[PLACEHOLDER: Summarize the overall impact of your marketing and outreach efforts. Include metrics if available:</p>
+            <p class="content-text">Within two years, we went from zero patients to regular clientele.</p>
             <ul class="content-list">
               <li>Growth in patient base</li>
               <li>Revenue from trucking contract</li>
               <li>Community awareness and reputation</li>
-              <li>Any ongoing partnerships that resulted</li>
+              <li>Word of mouth</strong> became our primary growth engine—no ad spend required</li>
             </ul>
           </div>
         </div>
@@ -751,7 +754,7 @@
         </div>
 <div class="content-section behind-scenes">
           <h2 class="content-title">Behind the Scenes</h2>
-          <p class="content-body">My entrepreneurial foundation started here—building a business while raising a young family. Four kids under five at a grand opening? That was just Tuesday for us.</p>
+          <p class="content-body">My entrepreneurial foundation started here—building a business while raising a young family. Four kids just under five at a grand opening? That was just Tuesday.</p>
           <div class="behind-scenes-grid">
             <div class="behind-scenes-card single">
               <img src="images/GrandOpeningFebruary1999.jpg" alt="Grand Opening February 1999" onclick="openPhotoModal(this.src, this.alt)">
