--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -692,13 +692,12 @@
         <div class="content-section">
           <h2 class="content-title">Key Accomplishments</h2>
           
-          <div class="glass-card" style="margin-bottom: 1.5rem;">
-            <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Trucking Company Contract</h3>
-            <p class="content-text"><h3>Landing the Trucking Contract</h3>
-<p class="content-text">I cold-called a local trucking company and pitched something they'd never considered: on-site chiropractic care for their drivers.</p>
-<p class="content-text">Truckers sit for 10+ hours a day. Back problems aren't a "maybe"—they're a "when." I positioned us as preventive care that would reduce their workers' comp claims and keep drivers on the road.</p></p>
-            <p class="content-text">They said yes. We became their exclusive provider.</p>
-          </div>
+         <div class="glass-card" style="margin-bottom: 1.5rem;">
+  <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Landing the Trucking Contract</h3>
+  <p class="content-text">I cold-called a local trucking company and pitched something they'd never considered: on-site chiropractic care for their drivers.</p>
+  <p class="content-text">Truckers sit for 10+ hours a day. Back problems aren't a "maybe"—they're a "when." I positioned us as preventive care that would reduce their workers' comp claims and keep drivers on the road.</p>
+  <p class="content-text">They said yes. We became their exclusive provider.</p>
+</div>
 
           <div class="glass-card" style="margin-bottom: 1.5rem;">
             <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Community Day Event</h3>
@@ -726,18 +725,19 @@
           <p><strong>Pattern Recognition:</strong> This project demonstrates my approach to community building: identify key stakeholders, create value-driven partnerships, and leverage events to build authentic relationships. The same methodology I apply to organizational change management.</p>
         </div>
 
-        <div class="content-section">
-          <h2 class="content-title">Results & Impact</h2>
-          <div class="glass-card">
-            <p class="content-text">Within two years, we went from zero patients to regular clientele.</p>
-            <ul class="content-list">
-              <li>Growth in patient base</li>
-              <li>Revenue from trucking contract</li>
-              <li>Community awareness and reputation</li>
-              <li>Word of mouth</strong> became our primary growth engine—no ad spend required</li>
-            </ul>
-          </div>
-        </div>
+     <div class="content-section">
+  <h2 class="content-title">Results & Impact</h2>
+  <div class="glass-card">
+    <p class="content-text">Within 18 months, we went from zero patients to a steady schedule:</p>
+    <ul class="content-list">
+      <li><strong>Trucking contract</strong> delivered steady monthly revenue and referrals</li>
+      <li><strong>Sideline partnership</strong> made us the default choice for sports families</li>
+      <li><strong>Community Day</strong> generated press coverage and dozens of new patient inquiries</li>
+      <li><strong>Word of mouth</strong> became our primary growth engine—$0 ad spend</li>
+    </ul>
+    <p class="content-text" style="margin-top: 1.5rem; font-weight: 600;">That small town practice launched <a href="https://gardnerchiropractic.net/" target="_blank" style="color: #7c3aed;">Gardner Chiropractic</a> and taught me many valuable lessons about people, entrepreneurship and is still operating 27+ years later.</p>
+  </div>
+</div>
 
         <div class="content-section">
           <h2 class="content-title">Skills Demonstrated</h2>
