--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -632,7 +632,7 @@
           <span class="hero-org">Gardner Chiropractic</span>
         </div>
         <h1 class="hero-title">Built to Last: 27 Years and Counting</h1>
-        <p class="hero-summary">Co-founded a chiropractic practice from scratch, negotiated its purchase, and built it to a full schedule in 18 months—still operating 27+ years later.</p>
+        <p class="hero-summary">Co-founded a chiropractic practice from scratch, negotiated its purchase, and built it to a full schedule in 18 months. Many valuable lesson's learned and though the practice relocated to the Phoenix metroplex it's still operating 27+ years later.</p>
        <div class="results-banner">
   <div class="result-card"><div class="result-number">27+</div><div class="result-label">Years Still Operating</div></div>
   <div class="result-card"><div class="result-number">0 → Full</div><div class="result-label">In 18 Months</div></div>
